# finvader

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SESSION.md
.github/workflows/: ci.yml
data/: headlines.tsv
docs/: pipeline.mmd  system.mmd
examples/: bench.rs  demo.rs
src/: catalyst.rs  lexicon.rs  lib.rs  phrases.rs
tests/: eval.rs
